[project]
name = "token-rate-limiter"
version = "0.1.0"
description = "Limits token usage per user using redis"
readme = "README.md"
authors = [
    { name = "Benjamin Cohen", email = "benjaminc10101@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "redis>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
